@startuml
'https://plantuml.com/class-diagram

class InterleaveContainer {
    boolean hasNext()
    CalculatedRun next()
    void addActualRun(()
}
note left of InterleaveContainer
 TDD Test
Algorithmus herausziehen
end note

package syncAction <<type>> {
class SyncAction
}

package alternatingOrder <<algorithm>>  {
class AlternatingOrderContainer {
boolean hasNext()
CalculatedRun next()
}
}


package alternatingOrderFactory  <<algorithm>>  {

class AlternatingOrderFactory {
 AlternatingOrderContainer create()
 boolean equals(AlternatingOrderFactory)
}
}
note left: Test creates a partial order list

InterleaveContainer --> AlternatingOrderFactory
InterleaveContainer --> AlternatingOrderContainer
AlternatingOrderFactory --> AlternatingOrderContainer : creates
@enduml